tests/sksl/errors/golden/UseWithoutInitializeDeadSwitch.glsl
### Compilation failed:

Needs rescan & out!
CFG scan!
Updated & out!
CFG scan!
error: 7: 'x' has not been assigned
1 error
